--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -1,3 +1,11 @@
+# Launcher Window
+launcherWindow.Title=Darts Trainings Game - Launcher
+# Texts
+launcherWindow.text.title=Darts Training Game
+launcherWindow.text.duration=Duration:
+# Buttons
+launcherWindow.button.challengeMode=Challenge Mode
+launcherWindow.button.endlessMode=Endless Mode
 # Main Window
 mainWindow.Title=Training Game - Main
 # Text Fields
@@ -22,3 +30,5 @@ sError.numberPrompt.amount=Check the amount of triple hits!
 # Major Errors
 mError.numberPrompt.initialisation=E: NumberPrompt couldn't be initialized
 mError.numberPrompt.open=E: NumberPrompt could not be opened
+# Fatal Errors
+fError.launcherWindow.resetFailed=F: Launcher Window could not be reset
