Small optimisations/fixes
* added "Darts" to window titles
* key "stout" to "stdOut"
* changed exit message for german language
* cleaner programm exit in `GameController`
- removed unnecessary code from `NumberPrompt`
- condensed somewhat duplicate error messages

--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -7,7 +7,7 @@ launcherWindow.text.duration=Duration:
 launcherWindow.button.challengeMode=Challenge Mode
 launcherWindow.button.endlessMode=Endless Mode
 # Main Window
-mainWindow.Title=Training Game - Main
+mainWindow.Title=Darts Training Game - Main
 # Text Fields
 mainWindow.textField.lost=Lost
 # Buttons
@@ -17,18 +17,17 @@ mainWindow.button.oneHit=One Hit
 mainWindow.button.twoHits=Two Hits
 mainWindow.button.threeHits=Three Hits
 # Number Prompt Window
-numberPromptWindow.Title=Training Game - Number Prompt
+numberPromptWindow.Title=Darts Training Game - Number Prompt
 numberPromptWindow.textField.amount=Amount of Triple Hits:
 # Keywords
 kw.score=Score
 kw.highscore=Highscore
 # StdOut messages
-stdout.exit=I: Exiting!
-stdout.reset=I: Resetting Game!
+stdOut.exit=I: Exiting!
+stdOut.reset=I: Resetting Game!
 # Small Errors
 sError.numberPrompt.amount=Check the amount of triple hits!
 # Major Errors
-mError.numberPrompt.initialisation=E: NumberPrompt couldn't be initialized
 mError.numberPrompt.open=E: NumberPrompt could not be opened
 # Fatal Errors
 fError.launcherWindow.resetFailed=F: Launcher Window could not be reset
