--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -3,6 +3,7 @@ launcherWindow.Title=Darts Trainings Game - Launcher
 # Texts
 launcherWindow.text.title=Darts Training Game
 launcherWindow.text.duration=Duration:
+launcherWindow.text.languageSelection=Language selection
 # Buttons
 launcherWindow.button.challengeMode=Challenge Mode
 launcherWindow.button.endlessMode=Endless Mode
