--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -1,5 +1,6 @@
+projectName=Darts Trainings Game
 # Launcher Window
-launcherWindow.Title=Darts Trainings Game - Launcher
+launcherWindow.Title=\ - Launcher
 # Texts
 launcherWindow.text.title=Darts Training Game
 launcherWindow.text.duration=Duration:
@@ -8,7 +9,7 @@ launcherWindow.text.languageSelection=Language selection
 launcherWindow.button.challengeMode=Challenge Mode
 launcherWindow.button.endlessMode=Endless Mode
 # Main Window
-mainWindow.Title=Darts Training Game - Main
+gameWindow.Title=\ - Main
 # Text Fields
 mainWindow.textField.lost=Lost
 # Buttons
@@ -18,7 +19,7 @@ mainWindow.button.oneHit=One Hit
 mainWindow.button.twoHits=Two Hits
 mainWindow.button.threeHits=Three Hits
 # Number Prompt Window
-numberPromptWindow.Title=Darts Training Game - Number Prompt
+numberPromptWindow.Title=\ - Number Prompt
 numberPromptWindow.textField.amount=Amount of Triple Hits:
 # Keywords
 kw.score=Score
