--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -8,9 +8,16 @@ launcherWindow.text.languageSelection=Language selection
 # Buttons
 launcherWindow.button.challengeMode=Challenge Mode
 launcherWindow.button.endlessMode=Endless Mode
+# Log Window
+#logWindow.Title=\ - Log
+# Texts
+logWindow.text.prompt=System Output here
+# Buttons
+logWindow.button.clear=Clear
+logWindow.button.close=Close
 # Main Window
 gameWindow.Title=\ - Main
-# Text Fields
+# Texts
 mainWindow.textField.lost=Lost
 # Buttons
 mainWindow.button.newGame=New Game
@@ -30,6 +37,7 @@ stdOut.reset=I: Resetting Game!
 # Small Errors
 sError.numberPrompt.amount=Check the amount of triple hits!
 # Major Errors
+mError.log.open=E: Log could not be opened
 mError.numberPrompt.open=E: NumberPrompt could not be opened
 # Fatal Errors
 fError.launcherWindow.resetFailed=F: Launcher Window could not be reset
