--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -21,6 +21,7 @@ gameWindow.Title=\ - Main
 mainWindow.textField.lost=Lost
 # Buttons
 mainWindow.button.newGame=New Game
+mainWindow.button.startStopTimer=Start/Stop Timer
 mainWindow.button.noHit=No Hit
 mainWindow.button.oneHit=One Hit
 mainWindow.button.twoHits=Two Hits
