--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -38,7 +38,8 @@ stdOut.reset=I: Resetting Game!
 # Small Errors
 sError.numberPrompt.amount=Check the amount of triple hits!
 # Major Errors
-mError.log.open=E: Log could not be opened
-mError.numberPrompt.open=E: NumberPrompt could not be opened
 # Fatal Errors
-fError.launcherWindow.resetFailed=F: Launcher Window could not be reset
+fError.launcherWindow.reset=F: Launcher Window could not be reset
+fError.launcherWindow.startGame=E: Could not start game
+fError.log.open=E: Log could not be opened
+fError.numberPrompt.open=E: NumberPrompt could not be opened
