--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -18,7 +18,9 @@ logWindow.button.close=Close
 # Main Window
 gameWindow.Title=\ - Main
 # Texts
-mainWindow.textField.lost=Lost
+mainWindow.textField.status.init=Press Start
+mainWindow.textField.status.paused=Paused
+mainWindow.textField.status.gameOver=Game Over
 # Buttons
 mainWindow.button.newGame=New Game
 mainWindow.button.startStopTimer=Start/Stop Timer
@@ -30,6 +32,7 @@ mainWindow.button.threeHits=Three Hits
 numberPromptWindow.Title=\ - Number Prompt
 numberPromptWindow.textField.amount=Amount of Triple Hits:
 # Keywords
+kw.timer=Time:
 kw.score=Score
 kw.highscore=Highscore
 # StdOut messages
