--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -5,9 +5,6 @@ launcherWindow.Title=\ - Launcher
 launcherWindow.text.title=Darts Training Game
 launcherWindow.text.duration=Duration:
 launcherWindow.text.languageSelection=Language selection
-# Buttons
-launcherWindow.button.challengeMode=Challenge Mode
-launcherWindow.button.endlessMode=Endless Mode
 # Log Window
 #logWindow.Title=\ - Log
 # Texts
@@ -16,7 +13,8 @@ logWindow.text.prompt=System Output here
 logWindow.button.clear=Clear
 logWindow.button.close=Close
 # Main Window
-gameWindow.Title=\ - Main
+gameWindow.title.challengeMode=Challenge Mode
+gameWindow.title.endlessMode=Endless Mode
 # Texts
 mainWindow.textField.status.init=Press Start
 mainWindow.textField.status.paused=Paused
@@ -39,8 +37,10 @@ kw.highscore=Highscore
 stdOut.exit=I: Exiting!
 stdOut.reset=I: Resetting Game!
 # Small Errors
+sError.launcherWindow.duration=Game Duration is not a number or not in the possible range \n It has to be a value from 1 to 60!
 sError.numberPrompt.amount=Check the amount of triple hits!
 # Major Errors
+mError.mainWindow.timerOverflow=Timer Overflow
 # Fatal Errors
 fError.launcherWindow.reset=F: Launcher Window could not be reset
 fError.launcherWindow.startGame=E: Could not start game
