Refined game start (code)
+ Challenge mode starts with "Enter" on "durationIn"
+ extracted method `setGameDuration`
* removed parameter from `startGame`
* renamed keys for easier access

--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -13,8 +13,8 @@ logWindow.text.prompt=System Output here
 logWindow.button.clear=Clear
 logWindow.button.close=Close
 # Main Window
-gameWindow.title.challengeMode=Challenge Mode
-gameWindow.title.endlessMode=Endless Mode
+gameWindow.title.challenge=Challenge Mode
+gameWindow.title.endless=Endless Mode
 # Texts
 mainWindow.textField.status.init=Press Start
 mainWindow.textField.status.paused=Paused
