--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -5,6 +5,18 @@ launcherWindow.Title=\ - Launcher
 launcherWindow.text.title=Darts Training Game
 launcherWindow.text.duration=Duration:
 launcherWindow.text.languageSelection=Language selection
+# Buttons
+launcherWindow.button.settings=Settings
+launcherWindow.button.quit=Quit
+# Settings Window
+settingsWindow.title=Settings
+# Texts
+settings.window.checkBox.showLog=Show Log on Game Startup
+# Buttons
+settingsWindow.menuButton.unset=Use system default
+settingsWindow.button.save=Save
+settingsWindow.button.close=Close
+logWindow.Title=\ - Log
 # Log Window
 #logWindow.Title=\ - Log
 # Texts
@@ -37,7 +49,7 @@ kw.highscore=Highscore
 stdOut.exit=I: Exiting!
 stdOut.reset=I: Resetting Game!
 # Small Errors
-sError.launcherWindow.duration=Game Duration is not a number or not in the possible range \n It has to be a value from 1 to 60!
+sError.duration=Game Duration is not a number or not in the possible range \n It has to be a value from 1 to 60!
 sError.numberPrompt.amount=Check the amount of triple hits!
 # Major Errors
 mError.mainWindow.timerOverflow=Timer Overflow
