--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -11,6 +11,7 @@ launcherWindow.button.quit=Quit
 # Settings Window
 settingsWindow.title=Settings
 # Texts
+settingsWindow.text.gameOverOnZero=Game Over on zero points
 settings.window.checkBox.showLog=Show Log on Game Startup
 # Buttons
 settingsWindow.menuButton.unset=Use system default
