* moving msg-identifiers into properties * fixed identifiers

--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -47,15 +47,16 @@ kw.timer=Time:
 kw.score=Score
 kw.highscore=Highscore
 # StdOut messages
-stdOut.exit=I: Exiting!
 stdOut.reset=I: Resetting Game!
+stdOut.exit=I: Exiting!
 # Small Errors
-sError.duration=Game Duration is not a number or not in the possible range \n It has to be a value from 1 to 60!
+sError.duration=E: Game Duration is not a number or not in the possible range \n It has to be a value from 1 to 60!
 sError.numberPrompt.amount=Check the amount of triple hits!
 # Major Errors
-mError.mainWindow.timerOverflow=Timer Overflow
+mError.mainWindow.timerOverflow=E: Timer Overflow
+mError.JSONInterface.corruptSettingsFile=E: Settings file is corrupt \n   Moving corrupt file to "corruptSettings.json" and creating new file
 # Fatal Errors
 fError.launcherWindow.reset=F: Launcher Window could not be reset
-fError.launcherWindow.startGame=E: Could not start game
-fError.log.open=E: Log could not be opened
-fError.numberPrompt.open=E: NumberPrompt could not be opened
+fError.launcherWindow.startGame=F: Could not start game
+fError.log.open=F: Log could not be opened
+fError.numberPrompt.open=F: NumberPrompt could not be opened
