+ added msg when timer is up

--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -46,6 +46,7 @@ numberPromptWindow.textField.amount=Amount of Triple Hits:
 kw.timer=Time:
 kw.score=Score
 kw.highscore=Highscore
+stdOut.timesUp=I: Time's up
 # StdOut messages
 stdOut.reset=I: Resetting Game!
 stdOut.exit=I: Exiting!
