* cleaned property files

--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -1,30 +1,30 @@
 projectName=Darts Trainings Game
+# Common
+# Texts
+cmn.text.duration=Duration:
+cmn.text.languageSelection=Language selection
+# Buttons
+cmn.button.close=Close
 # Launcher Window
 launcherWindow.Title=\ - Launcher
 # Texts
-launcherWindow.text.title=Darts Training Game
-launcherWindow.text.duration=Duration:
-launcherWindow.text.languageSelection=Language selection
 # Buttons
-launcherWindow.button.settings=Settings
 launcherWindow.button.quit=Quit
 # Settings Window
 settingsWindow.title=Settings
 # Texts
 settingsWindow.text.gameOverOnZero=Game Over on zero points
-settings.window.checkBox.showLog=Show Log on Game Startup
+settingsWindow.checkBox.showLog=Show Log on Game Startup
 # Buttons
 settingsWindow.menuButton.unset=Use system default
 settingsWindow.button.save=Save
-settingsWindow.button.close=Close
 logWindow.Title=\ - Log
 # Log Window
-#logWindow.Title=\ - Log
+logWindow.Title=\ - Log
 # Texts
 logWindow.text.prompt=System Output here
 # Buttons
 logWindow.button.clear=Clear
-logWindow.button.close=Close
 # Main Window
 gameWindow.title.challenge=Challenge Mode
 gameWindow.title.endless=Endless Mode
@@ -42,17 +42,17 @@ mainWindow.button.threeHits=Three Hits
 # Number Prompt Window
 numberPromptWindow.Title=\ - Number Prompt
 numberPromptWindow.textField.amount=Amount of Triple Hits:
+numberPromptWindow.amountErrorMsg=Check the amount of triple hits!
 # Keywords
 kw.timer=Time:
 kw.score=Score
 kw.highscore=Highscore
-stdOut.timesUp=I: Time's up
 # StdOut messages
+stdOut.timesUp=I: Time's up
 stdOut.reset=I: Resetting Game!
 stdOut.exit=I: Exiting!
 # Small Errors
-sError.duration=E: Game Duration is not a number or not in the possible range \n It has to be a value from 1 to 60!
-sError.numberPrompt.amount=Check the amount of triple hits!
+sError.duration=E: Game Duration is not a number or not in the possible range \n   It has to be a value from 1 to 60!
 # Major Errors
 mError.mainWindow.timerOverflow=E: Timer Overflow
 mError.JSONInterface.corruptSettingsFile=E: Settings file is corrupt \n   Moving corrupt file to "corruptSettings.json" and creating new file
