+ added button to return to default settings

--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -18,7 +18,7 @@ settingsWindow.checkBox.showLog=Show Log on Game Startup
 # Buttons
 settingsWindow.menuButton.unset=Use system default
 settingsWindow.button.save=Save
-logWindow.Title=\ - Log
+settingsWindow.button.resetToDefault=Default
 # Log Window
 logWindow.Title=\ - Log
 # Texts
