* renamed `handleCorruption` method to `backupAndRecreate` * renamed `corruptSettings.json` target to `oldSettings.json` * renamed `reset()` to `resetToDefaultSettings()` + resetting the settings also triggers `backupAndRecreate` instead of simply overwriting of the old settings

--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -55,7 +55,7 @@ stdOut.exit=I: Exiting!
 sError.duration=E: Game Duration is not a number or not in the possible range \n   It has to be a value from 1 to 60!
 # Major Errors
 mError.mainWindow.timerOverflow=E: Timer Overflow
-mError.JSONInterface.corruptSettingsFile=E: Settings file is corrupt \n   Moving corrupt file to "corruptSettings.json" and creating new file
+mError.JSONInterface.corruptSettingsFile=E: Settings file is corrupt \n   Moving corrupt file to "oldSettings.json" and creating new file
 # Fatal Errors
 fError.launcherWindow.reset=F: Launcher Window could not be reset
 fError.launcherWindow.startGame=F: Could not start game
